[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraph"
version = "0.2.0"
description = "FastMCP server: parse Python repos and query code relationship graphs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Farhan Baig", email = "mfbaig35r@gmail.com"},
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "numpy>=1.24"]
dev = ["pytest>=7", "pytest-timeout", "ruff", "mypy>=1.0"]

[project.scripts]
codegraph = "codegraph.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codegraph"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fastmcp.*", "networkx.*", "openai.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: integration tests that parse real repos"]
